# Betha-API-Extractor

./: .gitignore  README.md  main.py  pyproject.toml
betha_extractor/: audit.py  cli.py  config.py  endpoints.py  http_client.py  main.py  pagination.py  writers.py
betha_extractor/extractors/: base.py  group_a.py  group_b.py
